add button edition mode

--- a/templates/header/custom.mustache
+++ b/templates/header/custom.mustache
@@ -44,6 +44,9 @@
                             </a>
                         </div>
                     {{/ is_teacher }}
+                    <div class="ml-auto d-flex action-container" style="display: flex !important; justify-content: right;">
+                        {{{pageheadingbutton}}}
+                    </div>
                 </div>
             </div>
         </div>
