--- a/scss/layout/_fullheader.scss
+++ b/scss/layout/_fullheader.scss
@@ -63,6 +63,11 @@ body[data-theme='cbe'][data-role='user'] {
             }
           }
         }
+        .action-container {
+          .singlebutton {
+            box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+          }
+        }
       }
 
     }
